--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,196 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+.page {
+    position: relative;
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+.container {
+    display: flex;
+    min-height: 100vh;
+    width: 50%;
+    padding: 3%;
+}
+
+.nameCard {
+    z-index: 3;
+    position: absolute;
+    width: 25%;
+    min-width: 250px;
+    aspect-ratio: 2 / 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid var(--main-dark-color);
+    background-color: var(--main-light-color);
+    display: flex;
     flex-direction: column;
-  }
+    justify-content: space-around;
+    padding: 10px 10px 10px 2%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out; 
+}
+
+.opaque {
+    opacity:1;
+}
+
+.image {
+    background-image: url('../public/newdp.png');
+    background-size: 120%;
+    background-position: center center;
+    top: -35%;
+    right: -10%;
+    position: absolute;
+    height: 80%;
+    aspect-ratio: 1 /1;
+    border-radius: 50%;
+    border: 5px solid var(--main-dark-color);
+}
+
+.nameCard h1 {
+    font-family: var(--header-font);
+}
+
+.nameCard p {
+    font-family: var(--monospace-font);
+    color: var(--main-grey-color);
+}
+
+.small {
+    line-height: 0.3;
+    font-size: clamp(1rem, 3vw, 3rem);
+}
+
+.large {
+    font-size: clamp(1rem, 5vw, 5rem);
+}
+
+.ux {
+    position: relative;
+    /* background-color: #232323; */
+    background-color: var(--main-light-color);
+    display: flex;
+    flex-direction: column;
+    /* background-image: linear-gradient(to bottom right, #232323 , #3b3b3b ); */
+}
+
+.ux .scrollContainer {
+    overflow: hidden;
+    width: 100%;
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+}
+
+.scrollUX {
+    white-space: nowrap;
+    display: flex;
+}
+
+.scrollUX div {
+    display: flex;
+    animation: scrollTextLeft 35s infinite linear;
+}
+
+.scrollUX p {
+    padding: 0px 25px;
+    display: flex;
+    gap: 50px;
+    font-size: 17rem;
+    opacity: 3%;
+}
+
+.fe .scrollContainer {
+    overflow: hidden;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: 0%;
+    right: 0;
+    margin: auto;
+}
+
+.scrollFE {
+    /* align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100%; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    white-space: nowrap;
+    display: flex;
+}
+
+.scrollFE div {
+    display: flex;
+    animation: scrollTextRight 250s infinite linear;
+}
+
+.fe .scrollContainerLower {
+    height: 200px;
+    overflow: hidden;
+    width: 100%;
+    position: absolute;
+    top: 20%;
+    right: 0;
+}
+
+.scrollFELower {
+    position: absolute;
+    top: 0;
+    right: 0;
+    white-space: nowrap;
+    display: flex;
+}
+
+.scrollFELower div {
+    display: flex;
+    animation: scrollTextRight 180s infinite linear;
+}
+
+.scrollFE p, .scrollFELower p {
+        /* padding: 0px 10px; */
+        /* transform: translateX(-50%); */
+    margin: 0;
+    color: var(--main-green-color);
+    opacity: 3%;
+    font-family: var(--monospace-font);
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.scrollFE p {
+    font-size: 9rem;
+}
+
+.scrollFELower p {
+    font-size: 8rem;
+}
+
+@keyframes scrollTextLeft {
+    from   { transform: translateX(0%); }
+    to { transform: translateX(-50%); }
+}
+
+@keyframes scrollTextRight {
+    from   { transform: translateX(0%); }
+    to { transform: translateX(50%); }
+}
+
+.fe {
+    position: relative;
+    justify-content: flex-end;
+    align-items: flex-end;
+    /* background-color: #F4F4F4; */
+    background-color: var(--main-dark-color);
+    /* background-image: linear-gradient(to bottom left, #F4F4F4 , #cccccc ); */
 }
