--- a/components/Navigation/Navstyle.module.css
+++ b/components/Navigation/Navstyle.module.css
@@ -7,7 +7,7 @@
 }
 
 .menuButton {
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
     background: none;
@@ -17,11 +17,12 @@
     mix-blend-mode: difference;
     color: #f4f4f4;
     z-index: 5; 
+    cursor: pointer;
 }
 
 .container {
+    opacity: 0.98;
     z-index: 4;
-    text-align: right;
     position: absolute;
     top: 0%;
     right: 0%;
@@ -30,10 +31,10 @@
     background-color: var(--main-light-color);
     color: var(--main-dark-color);
     width: 300px;
-    padding: 0 22px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
     transition: transform 0.5s ease;
     box-shadow: -3px 0px 8px #23232331;
 }
@@ -42,44 +43,97 @@
     transform: translateX(0%);
 }
 
-.mainContainer {
-    background-color: transparent;
-    height: 50%;
-    margin-top: 40%;
-    gap: 50px;
+/* .logoContainer {
+    border: 1px solid red;
+    position: absolute; 
+    height: 38px;   
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    top: 24px;
+    left: 15%;
+} */
+
+.content {
+    margin-top: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-.logoContainer {
-    font-size: 3rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    height: 80%;
+    width: 70%;
+    /* border: 1px solid red; */
 }
 
 .navContainer {
     display: flex;
     flex-direction: column;
-    height: 80%;
-    justify-content: space-between;
-    /* gap: 50px; */
+    height: 60%;
+    min-height: 200px;
+    gap: 10%;
     font-family: var(--monospace-font);
 }
 
+.portfolio {
+    border: none;
+    background-color: transparent;
+    font-size: 1rem;
+    font-family: var(--monospace-font);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.chevron {
+    color: var(--main-green-color);
+    margin-left: 10px;
+    font-size: 0.8rem;
+    transition: transform 0.2s ease;
+}
+
+.rotated {
+    -ms-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.subMenu {
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left: 10%;
+    gap: 20px;
+    display: none;
+}
+
+.subMenuOpen {
+    display: flex;
+}
+
 .footerContainer {
-    height: 10%;
+    height: 12%;
+    min-height: 70px;
     font-family: var(--monospace-font);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-bottom: 20%;
 }
 
 .connectContainer {
+    width: 100%;
     font-size: 1.5rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     gap: 1.4rem;
+}
+
+.highlighted {
+    color: var(--main-green-color)
+}
+
+.navMenu a {
+    transition: color 0.3s ease;
+}
+
+
+.navMenu a:hover {
+    color: var(--main-green-color)
 }
