--- a/pages/about/About.module.css
+++ b/pages/about/About.module.css
@@ -2,6 +2,148 @@
     position: relative;
     width: 100%;
     height: 100%;
+    min-height: 100vh;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+.page header {
+    z-index: 1;
+    position: fixed;
+    top: -0%;
+    left: 0;
+    font-family: var(--header-font);
+    font-size: clamp(10rem, 20vw, 20rem);
+    line-height: 1;
+}
+
+.page header h1 {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.page footer {
+    font-size: clamp(23rem, 30vw, 30rem);
+    bottom: -25%;
+    right: 8%;
+    z-index: 1;
+    position: fixed;
+}
+
+.background {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+}
+
+.backgroundLoaded {
+    opacity: 0.03;
+}
+
+.container {
+    position: relative;
+    /* border: 1px solid red; */
+    z-index: 2;
+    width: 950px;
+    max-width: 70vw;
+    height: 70%;
+    min-height: 50vh;
+    gap: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.tagline {
+    width: 100%;
+    font-size: 1.5rem;
+    color: var(--main-green-color);
+    font-family: var(--monospace-font);
+    transform: translateX(-70px);
+    opacity: 0;
+    line-height: 2rem;
+    transition: all 1s ease-out 1s;
+}
+
+.taglineLoaded {
+    transform: translateX(-50px);
+    opacity: 1;
+}
+
+.paragraphTop {
+    opacity: 0;
+    transform: translateX(-20px);
+    transition: all 1s ease-out 2s;
+}
+
+.paragraphBtm {
+    opacity: 0;
+    transform: translateX(20px);
+    transition: all 1s ease-out 2s;
+}
+
+.paragraphLoaded {
+    opacity: 1;
+    transform: translateX(0px);
+}
+
+.container section {
+    width: 65%;
+    line-height: 1.5rem;
+}
+
+.topText {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    justify-self: flex-start;
+}
+
+.bottomText {
+    align-self: flex-end;
+    justify-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.container aside {
+    width: 35%;
+    position: absolute;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.185) ;
+}
+
+.topImage {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    transform: translate(60px, -10px);
+    opacity: 0;
+    bottom: 50%;
+    right:0;
+    transition: all 1s ease-out 3s;
+}
+
+.topImageLoaded {
+    transform: translate(50px, 0px);
+    opacity: 1;
+}
+
+.bottomImage {
+    width: 100%;
+    aspect-ratio: 1.3 / 1;
+    transform: translate(-60px, 10px);
+    opacity: 0;
+    top: 60%;
+    left: 0;
+    transition: all 1s ease-out 3s;
+}
+
+.bottomImageLoaded {
+    transform: translate(-50px, 0px);
+    opacity: 1;
 }
