--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
 
 html,
 body {
@@ -6,7 +6,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 18px;
   --main-dark-color: #232323;
   --main-light-color: #F4F4F4;
   --main-green-color: #49B42F;
@@ -16,11 +15,22 @@ body {
   --header-font: Georgia, 'Times New Roman', Times, serif;
 
   background-color: var(--main-light-color);
+  color: var(--main-dark-color)
+}
+
+html {
+  font-size: 18px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 100%;
 }
 
 * {
