--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono:wght@300;400&display=swap');
 
 html,
 body {
@@ -13,6 +13,7 @@ body {
 
   --monospace-font: 'Roboto Mono', monospace;
   --header-font: Georgia, 'Times New Roman', Times, serif;
+  --paragraph-font: 'Roboto', sans-serif;
 
   background-color: var(--main-light-color);
   color: var(--main-dark-color)
