--- a/pages/about/About.module.css
+++ b/pages/about/About.module.css
@@ -15,8 +15,9 @@
     top: -0%;
     left: 0;
     font-family: var(--header-font);
-    font-size: clamp(10rem, 20vw, 20rem);
+    font-size: clamp(8rem, 13vw, 20rem);
     line-height: 1;
+    color:var(--main-dark-color)
 }
 
 .page header h1 {
@@ -34,23 +35,32 @@
     right: 8%;
     z-index: 1;
     position: fixed;
+    color:var(--main-dark-color)
 }
 
 .background {
     opacity: 0;
-    transition: opacity 1s ease-out;
+    transition: opacity 1s ease-out .5s;
+    /* animation: backgroundAnimation 2s linear 1s normal forwards;  */
 }
 
 .backgroundLoaded {
     opacity: 0.03;
 }
 
+/* @keyframes backgroundAnimation {
+    0% { opacity: 0%; }
+    35% { opacity: .1; }
+    65% { opacity: .1; }
+    100% { opacity: 0.03 }
+} */
+
 .container {
     position: relative;
     /* border: 1px solid red; */
     z-index: 2;
     width: 950px;
-    max-width: 70vw;
+    max-width: 75vw;
     height: 70%;
     min-height: 50vh;
     gap: 1.5rem;
@@ -67,7 +77,7 @@
     transform: translateX(-70px);
     opacity: 0;
     line-height: 2rem;
-    transition: all 1s ease-out 1s;
+    transition: all 1s ease-out 1.5s;
 }
 
 .taglineLoaded {
@@ -76,15 +86,19 @@
 }
 
 .paragraphTop {
+    font-family: var(--paragraph-font);
     opacity: 0;
     transform: translateX(-20px);
     transition: all 1s ease-out 2s;
+    letter-spacing: 0.5px;
 }
 
 .paragraphBtm {
+    font-family: var(--paragraph-font);
     opacity: 0;
     transform: translateX(20px);
     transition: all 1s ease-out 2s;
+    letter-spacing: 0.5px;
 }
 
 .paragraphLoaded {
@@ -120,27 +134,28 @@
 
 .topImage {
     width: 100%;
-    aspect-ratio: 1 / 1;
-    transform: translate(60px, -10px);
+    aspect-ratio: 1 / 1.1;
+    transform: translate(50px, -10px);
     opacity: 0;
-    bottom: 50%;
+    bottom: 45%;
     right:0;
-    transition: all 1s ease-out 3s;
+
+    transition: all 1s ease-out 2.5s;
 }
 
 .topImageLoaded {
-    transform: translate(50px, 0px);
+    transform: translate(40px, 0px);
     opacity: 1;
 }
 
 .bottomImage {
     width: 100%;
-    aspect-ratio: 1.3 / 1;
+    aspect-ratio: 1.25 / 1;
     transform: translate(-60px, 10px);
     opacity: 0;
-    top: 60%;
+    top: 62%;
     left: 0;
-    transition: all 1s ease-out 3s;
+    transition: all 1s ease-out 2.5s;
 }
 
 .bottomImageLoaded {
