--- a/pages/contact/Contact.module.css
+++ b/pages/contact/Contact.module.css
@@ -15,7 +15,7 @@
     top: -0%;
     left: 0;
     font-family: var(--header-font);
-    font-size: clamp(10rem, 20vw, 20rem);
+    font-size: clamp(8rem, 13vw, 20rem);
     line-height: 1;
 }
 
@@ -38,7 +38,7 @@
 
 .background {
     opacity: 0;
-    transition: opacity 1s ease-out;
+    transition: opacity 1s ease-out 0.5s;
 }
 
 .backgroundLoaded {
@@ -81,13 +81,13 @@
 .detail1 {
     opacity: 0;
     transform: translateX(-10px);
-    transition: all 1s ease-out 1s;
+    transition: all 1s ease-out 1.5s;
 }
 
 .detail2 {
     opacity: 0;
     transform: translateX(-10px);
-    transition: all 1s ease-out 1.5s;
+    transition: all 1s ease-out 2s;
 }
 
 .formContainer {
@@ -102,7 +102,7 @@
     font-size: 1.5rem;
     opacity: 0;
     transform: translateX(-10px);
-    transition: all 1s ease-out 2.5s;
+    transition: all 1s ease-out 3s;
 }
 
 .form {
@@ -111,8 +111,8 @@
     flex-direction: column;
     justify-content: space-between;
     opacity: 0;
-    transform: translateY(-10px);
-    transition: all 1s ease-out 3.5s;
+    transform: translateX(10px);
+    transition: all 1s ease-out 3s;
 }
 
 .inputGroup {
