--- a/pages/portfolio/web/Web.module.css
+++ b/pages/portfolio/web/Web.module.css
@@ -127,6 +127,12 @@
     transition: all 1s ease-out 4s;
 }
 
+.project-5 {
+    transform: translateX(-10px);
+    opacity: 0;
+    transition: all 1s ease-out 4.5s;
+}
+
 .loaded {
     transform: translateX(0px);
     opacity: 1;
