--- a/pages/portfolio/web/Web.module.css
+++ b/pages/portfolio/web/Web.module.css
@@ -138,3 +138,21 @@
     opacity: 1;
 }
 
+@media screen and (max-width: 799px) {
+    .page {
+        padding: 30px;
+    }
+
+    .container {
+        width: 90vw;
+    }
+
+    .info {
+        flex-direction: column;
+        gap: 30px;
+        min-width:unset;
+        font-size: 1.2rem;
+        /* align-items: center;
+        text-align: center; */
+    }
+}
