--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,9 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 799px) {
+  html {
+    font-size: 16px;
+  }
+}
