trying fallback for css aspect-ratio

--- a/pages/about/About.module.css
+++ b/pages/about/About.module.css
@@ -161,6 +161,16 @@
     transition: all 1s ease-out 2.5s;
 }
 
+@supports not (aspect-ratio: auto) { 
+    .topImage {
+        height: 400px;
+    }
+
+    .bottomImage {
+        height: 300px;
+    }
+}
+
 .bottomImageLoaded {
     transform: translate(-50px, 0px);
     opacity: 1;
