--- a/pages/portfolio/ux/Ux.module.css
+++ b/pages/portfolio/ux/Ux.module.css
@@ -126,3 +126,31 @@
     opacity: 1;
 }
 
+@media screen and (max-width: 799px) {
+    .page {
+        padding: 30px;
+    }
+
+    .page header {
+        font-size: clamp(5rem, 13vw, 20rem);
+    }
+
+    .page footer {
+        font-size: clamp(15rem, 30vw, 30rem);
+        bottom: -10%;
+        right: 0%;
+    }
+
+    .container {
+        width: 90vw;
+    }
+
+    .info {
+        flex-direction: column;
+        gap: 30px;
+        min-width:unset;
+        font-size: 1.2rem;
+        /* align-items: center;
+        text-align: center; */
+    }
+}
