--- a/components/HomepageText/HomepageText.module.css
+++ b/components/HomepageText/HomepageText.module.css
@@ -51,3 +51,24 @@
     font-family: 'Roboto Mono', monospace;
     color: #888888;
 }
+
+@media screen and (max-width: 799px) {
+    .container {
+        width: 100%;
+        height: 80%;
+        max-height: 250px;
+    }
+
+    .container p {
+        font-size: clamp(0.8rem, 2.3vh, 1rem);
+    }
+
+    .small {
+        line-height: 0.3;
+        font-size: clamp(1rem, 7vw, 2rem);
+    }
+    
+    .large {
+        font-size: clamp(2rem, 10vw, 3rem);
+    }
+}
