--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,7 +9,7 @@
 
 .container {
     display: flex;
-    min-height: 100vh;
+    height: 100vh;
     width: 50%;
     padding: 3%;
 }
@@ -196,4 +196,79 @@
     /* background-color: #F4F4F4; */
     background-color: var(--main-dark-color);
     /* background-image: linear-gradient(to bottom left, #F4F4F4 , #cccccc ); */
+}
+
+@media screen and (max-width: 799px) {
+    .page {
+        flex-direction: column;
+    }
+
+    .container {
+        width: 100%;
+        height: 50vh;
+        padding: 20px;
+    }
+
+    .scrollUX p {
+        font-size: 9rem;
+    }
+
+    .scrollFE p {
+        font-size: 5.5rem;
+    }
+    
+    .scrollFELower p {
+        font-size: 4.5rem;
+    }
+
+    .small {
+        line-height: 0.3;
+        font-size: 1rem
+    }
+    
+    .large {
+        font-size: 1rem;
+    }
+
+    .nameCard {
+        min-width: unset;
+        padding: 10px 10px 10px 10px;
+        width: 90vw;
+        height: 12vh;
+        justify-content: center;
+        background-image: url('../public/oie_transparent.png');
+        background-repeat: no-repeat;
+        background-size: 10vh;
+        background-position: top right;
+        /* flex-direction: row; */
+        /* text-align: right; */
+    }
+
+    .mobileSmall {
+        font-weight: normal;
+        font-size: clamp(5.5vw, 5.5vw, 2rem);
+        color: var(--main-grey-color);
+    }
+
+    .mobileLarge {
+        font-weight: bold;
+        font-size: clamp(7vw, 7vw, 3rem);
+    }
+
+    .image {
+        /* display: none; */
+        width: 90px;
+        height: 90px;
+        top: -70%;
+        right: -30%;
+        /* transform: translateY(-50%); */
+    }
+
+    .title {
+        display: flex;
+    }
+
+    .nameCard p {
+        font-size: 0.8rem;
+    }
 }
