--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -155,3 +155,34 @@
     transform: translateX(0px);
     opacity: 1;
 }
+
+@media screen and (max-width: 799px) {
+    .page {
+        padding: 30px;
+    }
+
+    .page header {
+        font-size: clamp(5rem, 13vw, 20rem);
+    }
+
+    .page footer {
+        font-size: clamp(15rem, 30vw, 30rem);
+        bottom: -10%;
+        right: 0%;
+    }
+
+    .imageContainer {
+        position: relative;
+        margin-bottom: 25%;
+        width: clamp(23rem, 35vw, 50rem);
+        /* aspect-ratio: 2 / 1; */
+    }
+
+    .section ol {
+        column-count: 1;
+    }
+
+    .quoteContainer {
+        width: 100%;
+    }
+}
