--- a/components/ProjectImages/ProjectImages.module.css
+++ b/components/ProjectImages/ProjectImages.module.css
@@ -1,13 +1,8 @@
 .container {
-    /* width: 100%; */
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     gap: 10px;
-    /* border-radius: 10px;
-    background-color: #2152141a;
-    padding: 20px; */
 }
 
 .imageContainer {
@@ -17,16 +12,13 @@
     flex-shrink: 1;
     width: 100%;
     gap: 10px;
-    /* height: 90%; */
     position: relative;
     flex-direction: row;
-    /* height: 50vh; */
 }
 
 .image {
+    cursor: zoom-in;
     position: relative;
-    /* flex-grow: 1;
-    width: 70vw; */
     flex-grow: 1;
 }
 
@@ -47,17 +39,11 @@
         flex-shrink: 1;
         width: 100%;
         gap: 10px;
-        /* height: 90%; */
         position: relative;
         flex-direction: column;
-        /* height: 50vh; */
     }
     
     .image {
-        /* position: relative; */
-        /* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1); */
-        /* flex-grow: 1;
-        width: 70vw; */
         flex-grow: 1;
     }
     
